static/css/index.css
/* ... */
a:hover {
  text-decoration: none;
  background: var(--text-color-link-hover);
  border-radius: 5px;
  color: var(--text-dark) /* !important; */
}

article > ul > li {
  line-height: 1.8;
}

button,
.button,
a.button, /* extra specificity to override a */
input[type="submit"],
input[type="reset"],
input[type="button"],
label[type="button"] {
  border: var(--standard-border);
  border-radius: var(--standard-border-radius);
  background-color: var(--accent-bg);
  /* font-size: 1rem; */
  color: var(--text);
  /* padding: 0.7rem 0.9rem; */
  /* margin: 0.5rem 0; */
  text-decoration: none;
  font-family: inherit;
  line-height: normal;
}

.button[aria-disabled="true"], 
input:disabled,
textarea:disabled,
select:disabled,
button[disabled] {
  cursor: not-allowed;
  background-color: var(--disabled);
  color: var(--text-light)
}

input[type="range"] {
  padding: 0;
}

/* strikethrough */
s {
  color: var(--text-color-link);
  text-decoration: line-through;
  text-decoration-thickness: 0.11rem;
}
/* Set the cursor to '?' on an abbreviation and style the abbreviation to show that there is more information underneath */
abbr[title] {
  cursor: help;
  text-decoration-line: underline;
  text-decoration-style: dotted;
}

button:enabled:hover,
.button:not([aria-disabled="true"]):hover,
input[type="submit"]:enabled:hover,
input[type="reset"]:enabled:hover,
input[type="button"]:enabled:hover,
label[type="button"]:hover {
  /* filter: brightness(1.4); */
  background-color: var(--text-color-link-hover);
  cursor: pointer;
}

.button:focus-visible,
button:focus-visible:where(:enabled),
input:enabled:focus-visible:where(
  [type="submit"],
  [type="reset"],
  [type="button"]
) {
  outline: 2px solid var(--accent);
  outline-offset: 1px;
}

/* Format navigation */
nav {
  padding: 0;
}

/* Use flexbox to allow items to wrap, as needed */
nav ul,
nav ol {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  list-style-type: none;
  margin: 0;
  padding-inline-start: 0;
  column-gap: var(--navspacer-large);
}

/* List items are inline elements, make them behave more like blocks */
nav ul li,
nav ol li {
  display: inline-block;
}

nav li {
  line-height: 2;
}

nav a,
nav a:visited {
  border: none;
  color: var(--text-color-link);
  display: inline-block;
  text-decoration: none;
}

nav a:hover,
nav a.current,
nav a[aria-current="page"] {
  background: none;
  color: var(--text-color-link-visited);
  cursor: pointer;
  text-decoration: underline;
  text-decoration-thickness: 0.12rem;
}

nav a[aria-current="page"] {
  font-weight: 600;
}

/* Reduce nav side on mobile */
@media only screen and (max-width: 720px) {
  header > nav a {
    border: none;
    padding: 0;
    text-decoration: none;
    line-height: 1;
  }
}

/* list items */

ul li {
  line-height: 1.7;
}

/* Consolidate box styling */
aside, details, pre, progress {
  background-color: var(--accent-bg);
  border: 1px solid var(--border);
  border-radius: var(--standard-border-radius);
  margin-bottom: 1rem;
}

aside {
  font-size: 1.1rem;
  width: 30%;
  padding: 0 15px;
  margin-inline-start: 15px;
  float: right;
}
*[dir="rtl"] aside {
  float: left;
}

/* Make aside full-width on mobile */
@media only screen and (max-width: 720px) {
  aside {
    width: 100%;
    float: none;
    margin-inline-start: 0;
  }
}

article {
  margin-bottom:1.5rem;
 }
 article:last-child {
  margin-bottom:0;
 }

section {
  /* border-top: 1px solid var(--border); */
  /* border-bottom: 1px solid var(--border); */
  padding: 2rem 0rem;
  margin: 3rem 0;
}

/* Don't double separators when chaining sections */
section + section,
section:first-child {
  border-top: 0;
  padding-top: 0;
}

section:last-child {
  border-bottom: 0;
  padding-bottom: 0;
}

details {
  padding: 0.7rem 1rem;
  margin-top: 1rem;
}

summary {
  cursor: pointer;
  font-weight: bold;
  padding: 0.7rem 1rem;
  margin: -0.7rem -1rem;
  word-break: break-all;
}

details[open] > summary + * {
  margin-top: 0;
}

details[open] > summary {
  margin-bottom: 0.5rem;
}

details[open] > :last-child {
  margin-bottom: 0;
}

/* Format tables */
table {
  border-collapse: collapse;
  margin: 1.5rem 0;
}

td,
th {
  border: 1px solid var(--border);
  text-align: start;
  padding: 0.5rem;
}

th {
  background-color: var(--border-light);
  font-weight: bold;
  position: sticky;
  top: 0;
}

tr:nth-child(even) {
  /* Set every other cell slightly darker. Improves readability. */
  background-color: var(--accent-bg);
}

table caption {
  font-weight: bold;
  margin-bottom: 0.5rem;
}


/* Misc body elements */
hr {
  border: none;
  height: 1px;
  background: var(--border);
  margin: 1.5rem auto;
}

mark {
  padding: 2px 5px;
  border-radius: var(--standard-border-radius);
  background-color: var(--marked);
  color: black;
}

img,
video {
  max-width: 100%;
  height: auto;
  border-radius: var(--standard-border-radius);
}

figure {
  margin: 0;
  display: block;
  overflow-x: auto;
}

figcaption {
  text-align: center;
  font-size: 0.9rem;
  color: var(--text-lighter);
  margin-bottom: 1rem;
  margin-top: 0.5rem;
}

figcaption > a {
  text-decoration-thickness: 0.03rem;
}

blockquote {
  margin-inline-start: 1rem;
  margin-inline-end: 0;
  margin-block: 2rem;
  padding: 0.4rem 0.8rem;
  border-inline-start: 0.35rem solid var(--text-color-postlink-hover);
  color: var(--text-light);
  font-style: italic;
}

cite {
  font-size: 0.9rem;
  color: var(--text-light);
  font-style: normal;
}

dt {
    color: var(--text-light);
}

/* Use mono font for code elements */
code,
pre,
kbd,
samp {
  font-family: var(--mono-font);
  color: var(--code);
}

kbd {
  color: var(--preformatted);
  border: 1px solid var(--preformatted);
  border-bottom: 3px solid var(--preformatted);
  border-radius: var(--standard-border-radius);
  padding: 0.1rem 0.4rem;
}

pre {
  padding: 1rem 1.4rem;
  max-width: 100%;
  overflow: auto;
  background: var(--bg-pre);
}
/* ... */

